--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -15,7 +15,7 @@
   position: relative;
   font-size: 24px;
   font-weight: bold;
-  color: #FFFFFF;
+  color: transparent;
   letter-spacing: 1px;
   height: 100%;
 }
